--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </select>
                     </div>
                     <div class="bottoni">
-                        <div class="btn btn-primary">Genera</div>
+                        <div id="submit" class="btn btn-primary">Genera</div>
                         <div class="btn btn-primary">Annulla</div>
                     </div>
                 </div>
