--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <div class="container">
         <header>
-            <h2 class="text-center my-5">CALCOLA IL PREZZO DEL TUO BISGLIETTO</h2>
+            <h2 class="text-center text-white my-5"><b>CALCOLA IL PREZZO DEL TUO BISGLIETTO</b></h2>
         </header>
     
         <main>
             <div class="data">
-                <div class="row justify-content-center text-center pt-4">
+                <div class="row justify-content-center text-center py-5">
                     <div class="col-4">
                         <label for="user-data">Nome Cognome</label>
                         <input type="text" id="user-data">
@@ -35,24 +35,24 @@
                         </select>
                     </div>
                     <div class="bottoni">
-                        <div id="submit" class="btn btn-primary">Genera</div>
-                        <div class="btn btn-primary">Annulla</div>
+                        <div class="btn btn-primary submit">Genera</div>
+                        <div class="btn btn-warning reset">Annulla</div>
                     </div>
                 </div>
             </div>
-            <div class="ticket text-center my-5">
-                <h2>IL TUO BIGLIETTO</h2>
-                <div class="row">
+            <div class="ticket text-center my-5 visually-hidden">
+                <h2 class="text-white"><b>IL TUO BIGLIETTO</b></h2>
+                <div class="row py-5">
                     <div class="col-4">
-                        <h5>DETTAGLIO PASSEGGERI</h5>
-                        <div class="passenger pt-3">
+                        <h5>DETTAGLIO PASSEGGERO</h5>
+                        <div class="psg-data pt-3">
                             <h5>NOME DEL PASSEGGERO</h5>
                             <div id="passenger"></div>
                         </div>
                     </div>
                     <div class="col-8">
                         <table class="table">
-                            <thead>
+                            <thead> 
                               <tr>
                                 <th scope="col">Offerta</th>
                                 <th scope="col">Carrozza</th>
@@ -68,7 +68,7 @@
                                 <td id="ticket-price"></td>
                               </tr>
                             </tbody>
-                          </table>
+                        </table>
                     </div>
                 </div>
             </div>
